<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_margin="10dp"
        android:textColor="@color/primary_text"
        android:text="@string/title"/>

    <Button
        android:id="@+id/app1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/accent"
        android:textColor="@color/icons"
        android:text="@string/app1"/>

    <Button
        android:id="@+id/app2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/accent"
        android:textColor="@color/icons"
        android:text="@string/app2"/>

    <Button
        android:id="@+id/app3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/accent"
        android:textColor="@color/icons"
        android:text="@string/app3"/>

    <Button
        android:id="@+id/app4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/accent"
        android:textColor="@color/icons"
        android:text="@string/app4"/>

    <Button
        android:id="@+id/app5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/accent"
        android:textColor="@color/icons"
        android:text="@string/app5"/>

    <Button
        android:id="@+id/app6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/accent"
        android:textColor="@color/icons"
        android:text="@string/app6"/>
</LinearLayout>
